--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 #Helpful for mac
-*.DS_Store
+.DS_Store
 
 ## Build generated
 build/
