--- a/ChatApp/GoogleService-Info.plist
+++ b/ChatApp/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>982122860138-p429rjrngnd91ueqatp2fa3dh588falg.apps.googleusercontent.com</string>
+	<string>951668193629-olebniu8kvhugvuaiocco18d9hk255gj.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.982122860138-p429rjrngnd91ueqatp2fa3dh588falg</string>
+	<string>com.googleusercontent.apps.951668193629-olebniu8kvhugvuaiocco18d9hk255gj</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBg32pByvIy34sABaOxvutV6v39zpKWhcM</string>
+	<string>AIzaSyAYQeVCYz6D5DMlmQKHRs-RTEiLsvrRzyM</string>
 	<key>GCM_SENDER_ID</key>
-	<string>982122860138</string>
+	<string>951668193629</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.agile.chatapp</string>
+	<string>com.agi.chatapp</string>
 	<key>PROJECT_ID</key>
-	<string>chat-app-554b6</string>
+	<string>agichatapp-a02de</string>
 	<key>STORAGE_BUCKET</key>
-	<string>chat-app-554b6.appspot.com</string>
+	<string>agichatapp-a02de.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:982122860138:ios:4d742d63ee06db26</string>
+	<string>1:951668193629:ios:75c2b6cbf3b9b025</string>
 	<key>DATABASE_URL</key>
-	<string>https://chat-app-554b6.firebaseio.com</string>
+	<string>https://agichatapp-a02de.firebaseio.com</string>
 </dict>
 </plist>
